fix: increase z-index to hide box

--- a/public/styles.css
+++ b/public/styles.css
@@ -42,7 +42,7 @@ img {
     position: absolute;
     top: 0;
     left: 0;
-    z-index: 0;
+    z-index: 1;
 }
 
 .progress-bar {
